update to java 11, update dependencies, remove jdom,xalan,commons-logging
- switch all file related parameters to File instead of String
- remove unneeded "public" from interface methods